// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Icon WT markup - icon arrow-down renders correctly 1`] = `
<jest>
  <span
    aria-hidden="true"
    class="wt-icon-phosphor--arrow-down ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-down"
  />
</jest>
`;

exports[`Icon WT markup - renders correctly with accessibility content 1`] = `
<jest>
  <span
    aria-hidden="false"
    class="wt-icon-phosphor--arrow-down ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-down"
    data-desc="Description"
    role="img"
    title="Title"
  />
</jest>
`;

exports[`Icon WT markup - renders correctly with extra attributes 1`] = `
<jest>
  <span
    aria-hidden="true"
    class="wt-icon-phosphor--arrow-down ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-down"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  />
</jest>
`;

exports[`Icon WT markup - renders correctly with extra class names 1`] = `
<jest>
  <span
    aria-hidden="true"
    class="wt-icon-phosphor--arrow-down ecl-icon ecl-icon--m custom-class custom-class--test ecl-icon-phosphor--arrow-down"
  />
</jest>
`;
